--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,13 @@
-<h1>Login</h1>
-<section>
-    <form ng-submit="loginUser();">
-        <label for"userUsername">Username</label><input type="text" id="userUsername" ng-model="userUsername">
-        <input type="submit" value="Login">
-    </form>
-</section>
+<div class="loginContainer">
+  <label for="basic-url" class="credentials"><h2>Unesi podatke</h2></label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">Korisničko ime: </span>
+    <input type="text" class="form-control user" id="basic-url" aria-describedby="basic-addon3" placeholder="Unesite korisničko ime..." required>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">Korisnička lozinka: </span>
+    <input type="password" class="form-control pw" id="basic-url" aria-describedby="basic-addon3" placeholder="Unesite lozinku..." required>
+  </div>
+    <button type="button" class="btn btn-primary loginBtn">Prijavi se</button>
+    <a href="#" class="forgotPw">Forgot password?</a>
+</div>
